--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@supabase/supabase-js": "^2.0.0",
     "@tailwindcss/line-clamp": "^0.4.2",
     "axios": "^1.1.3",
+    "express": "^4.18.2",
     "flowbite": "^1.5.3",
     "moment": "^2.29.4",
+    "serve-static": "^1.15.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
