--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@supabase/supabase-js": "^2.0.0",
     "@tailwindcss/line-clamp": "^0.4.2",
     "axios": "^1.1.3",
+    "daisyui": "^2.33.0",
     "express": "^4.18.2",
     "flowbite": "^1.5.3",
     "moment": "^2.29.4",
